--- a/1.Annotations.md
+++ b/1.Annotations.md
@@ -1,5 +1,5 @@
 # Annotations
-Bean Creation : 
+**Bean Creation** : 
 1. @Component - @Component is a class-level annotation. It is used to denote a class as a Component. We can use @Component across the application to mark the beans as 
                Spring’s managed components
 2. i) @Configuration - Annotating a class with @Configuration indicates that its primary purpose is as a source of bean definitions.
