--- a/1.Annotations.md
+++ b/1.Annotations.md
@@ -1,7 +1,7 @@
 # Annotations
 **Bean Creation** : 
 1. **@Component** - @Component is a class-level annotation. It is used to denote a class as a Component. We can use @Component across the application to mark the beans as Spring’s managed components
-                                                   (or)
 2. **@Configuration** - Annotating a class with @Configuration indicates that its primary purpose is as a source of bean definitions.
 3. **@Bean** - @Bean is a method level annotation. The @Bean annotation is used to indicate that a method instantiates, configures, and initializes a new object to be 
                managed by the Spring IoC container.
+**   Stereotype Annotations**
