--- a/1.Annotations.md
+++ b/1.Annotations.md
@@ -5,8 +5,8 @@
 3. **@Bean** - @Bean is a method level annotation. The @Bean annotation is used to indicate that a method instantiates, configures, and initializes a new object to be managed by the Spring IoC container.
 
 **Stereotype Annotations :**
-
-1.**@Component**
-2.**@Service**
-3.**@Respository**
-4.**@Controller**
+( Using any of these annoations on a class will create a bean in spring container. Different lies in their usage purpose)
+1. **@Component** - @Component is a class-level annotation. It is used to denote a class as a Component. We can use @Component across the application to mark the beans as Spring’s managed components
+2. **@Service** - We specify a class with @Service to indicate that they’re holding the business logic. Besides being used in the service layer, there isn’t any other special use for this annotation. The utility classes can be marked as Service classes. (Ex : class containing a method to find factorial of a number)
+3. **@Respository** - We specify a class with @Repository to indicate that they’re dealing with CRUD operations, usually, it’s used with DAO (Data Access Object) or Repository implementations that deal with database tables.
+4. **@Controller** - We specify a class with @Controller to and responsible to indicate that a class serves as a controller, handle user requests and return the appropriate response. It is mostly used with REST Web Services.
