--- a/1.Annotations.md
+++ b/1.Annotations.md
@@ -4,6 +4,14 @@
 2. **@Configuration** - Annotating a class with @Configuration indicates that its primary purpose is as a source of bean definitions.It is used for explicit bean creation.
 3. **@Bean** - @Bean is a method level annotation. The @Bean annotation is used to indicate that a method instantiates, configures, and initializes a new object to be managed by the Spring IoC container.It is used for explicit bean creation along with @Configuration annotation .
 
+**Dependency Injection**
+
+1. **@Autowired:** Used to achieve dependency injection. Used during field, setter and construction injection (when one contructor is present we can omit @Autowired annotation)
+2. **@Primary:** Used at class level. This annotation defines a preference when multiple beans of the same type are present. The bean associated with the @Primary annotation will be used unless otherwise indicated.
+3.  **@Qualifier(bean name) :** @Qualifier can be used to explicitly specify which bean should be injected when multiple beans of same type are present 
+4. **@Lazy** : Used to resolve circular dependency . It can be used on constructor level or class level
+
+
 **Stereotype Annotations :**
 ( Using any of these annoations on a class will create a bean in spring container. Different lies in their usage purpose)
 1. **@Component** - @Component is a class-level annotation. It is used to denote a class as a Component. We can use @Component across the application to mark the beans as Spring’s managed components
