--- a/1.Annotations.md
+++ b/1.Annotations.md
@@ -7,8 +7,8 @@
 **Dependency Injection**
 
 1. **@Autowired:** Used to achieve dependency injection. Used during field, setter and construction injection (when one contructor is present we can omit @Autowired annotation)
-2. **@Primary:** Used at class level. This annotation defines a preference when multiple beans of the same type are present. The bean associated with the @Primary annotation will be used unless otherwise indicated.
-3.  **@Qualifier(bean name) :** @Qualifier can be used to explicitly specify which bean should be injected when multiple beans of same type are present 
+2. **@Primary:** Used at class level. By default spring injects beans based on its type. Spring gets confused when 2 beans of same are present. This annotation defines a preference when multiple beans of the same type are present. The bean associated with the @Primary annotation will be used unless otherwise indicated.
+3.  **@Qualifier(bean name) :** @Qualifier can be used to explicitly specify which bean should be injected when multiple beans of same type are present i.e bean injection takes place based on the name rather than type.
 4. **@Lazy** : Used to resolve circular dependency . It can be used on constructor level or class level
 
 
