Update 2. Dependency Injection.md

--- a/2. Dependency Injection.md
+++ b/2. Dependency Injection.md
@@ -1,1 +1,24 @@
-#Setter Injection
+# Field Injection
+Dependency is set to fields of class using @Autowired annotation
+Advantages : 
+Simple and easy to use
+Disadvantes :
+Cannot be used with immutable fields (most of the time we create immutable objects using final keyword)
+Chances of Null pointer exception (chances are low but still possible)
+
+# Setter Injection
+Dependency is set using the setter of the field. Dependency is passed as a argument to the setter method
+We have to annotate the setter method with @Autowired annotation
+Advatnanges : 
+Easy for Junit testing, we can pass mock objects
+Disadvantages :
+Cannot be used with immutable fields (most of the time we create immutable objects using final keyword)
+
+# Constructor Injection (Most commonly used)
+All the dependencied will be injected at the time of initialization. Dependencies are passed as arguments to the constructor
+Advantanges : 
+Makes 100% sure that our objects will be initialized with all the required dependencies
+No null pointer exception
+We can create immutable objects using constructor injection
+
+
