Update 2. Dependency Injection.md

--- a/2. Dependency Injection.md
+++ b/2. Dependency Injection.md
@@ -26,4 +26,6 @@ Makes 100% sure that our objects will be initialized with all the required depen
 No null pointer exception
 We can create immutable objects using constructor injection
 
+# Disadvantages of Dependency Injection 
+Circular dependency : when bean A depends on B and bean B depends on A. Can be resolved using @Lazy Annotations.
 
