--- a/2. Dependency Injection.md
+++ b/2. Dependency Injection.md
@@ -27,5 +27,5 @@ No null pointer exception
 We can create immutable objects using constructor injection
 
 # Disadvantages of Dependency Injection 
-Circular dependency : when bean A depends on B and bean B depends on A. Can be resolved using @Lazy Annotations.
+Circular dependency : when bean A depends on B and bean B depends on A. Can be resolved using @Lazy Annotations
 
