--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -18,3 +18,10 @@
 2. **@Service** - We specify a class with @Service to indicate that they’re holding the business logic. Besides being used in the service layer, there isn’t any other special use for this annotation. The utility classes can be marked as Service classes. (Ex : class containing a method to find factorial of a number)
 3. **@Respository** - We specify a class with @Repository to indicate that they’re dealing with CRUD operations, usually, it’s used with DAO (Data Access Object) or Repository implementations that deal with database tables.
 4. **@Controller** - We specify a class with @Controller to and responsible to indicate that a class serves as a controller, handle user requests and return the appropriate response. It is mostly used with REST Web Services.
+
+**Other Annotations**
+
+1. **@SpringBootApplication :** Uses a combination of @Documented, @Inherited, **@SpringBootConfiguration, @EnableAutoConfiguration, @ComponentScan**
+2. **@SpringBootConfiguration :** Same as configuration annotation. Here it should be used with @ComponentScan annotation for component scanning
+3. **@EnableAutoConfiguration :** This annotation enables Spring Boot's auto-configuration mechanism, which automatically configures your application based on the dependencies you have included in your project.
+4. **@ComponentScan:** This annotation enables component scanning, which allows Spring to automatically discover and register beans in your application context.
