--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -24,4 +24,6 @@
 1. **@SpringBootApplication :** Applied to the main class of the spring boot application .Uses a combination of @Documented, @Inherited, **@SpringBootConfiguration, @EnableAutoConfiguration, @ComponentScan**
 2. **@SpringBootConfiguration :** Same as configuration annotation. Here it should be used with @ComponentScan annotation for component scanning
 3. **@EnableAutoConfiguration :** This annotation enables Spring Boot's auto-configuration mechanism, which automatically configures your application based on the dependencies you have included in your project.
-4. **@ComponentScan:** This annotation enables component scanning, which allows Spring to automatically discover and register beans in your application context.
+4. **@ComponentScan:** This annotation enables component scanning, which allows Spring to automatically discover and register beans in your application context.Main class takes this responsibility. By default all the subpackages of the main class package will be scanned. If we want spring to scan the other packages.We should explicity define a class and annotate it with **@Configuration, @ComponentScan(basePackages="packagepath")**.
+
+
