--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -3,6 +3,8 @@
 1. **@Component** - @Component is a class-level annotation. It is used to denote a class as a Component. We can use @Component across the application to mark the beans as Spring’s managed components
 2. **@Configuration** - Annotating a class with @Configuration indicates that its primary purpose is as a source of bean definitions.It is used for explicit bean creation.
 3. **@Bean** - @Bean is a method level annotation. The @Bean annotation is used to indicate that a method instantiates, configures, and initializes a new object to be managed by the Spring IoC container.It is used for explicit bean creation along with @Configuration annotation .
+4. **@PostConstruct -** Spring calls the methods annotated with @PostConstruct only once, just after the initialization of bean properties. Keep in mind that these methods will run even if there’s nothing to initialize.The method annotated with @PostConstruct can have any access level, but it can’t be static.One possible use of @PostConstruct is populating a database. For instance, during development, we might want to create some default users
+5. **@PreDestroy:** A method annotated with @PreDestroy runs only once, just before Spring removes our bean from the application context.Same as with @PostConstruct, the methods annotated with @PreDestroy can have any access level, but can’t be static. The purpose of this method should be to release resources or perform other cleanup tasks, such as closing a database connection, before the bean gets destroyed.
 
 **Dependency Injection**
 
