--- a/4.Bean Scope.md
+++ b/4.Bean Scope.md
@@ -1,5 +1,13 @@
 # Bean Scope 
-What and when bean will be created ?
+
 ![Screenshot (2685)](https://github.com/user-attachments/assets/41959a02-5ec2-45ba-b534-1f94b7ff3ce4)
 
-**singleton :** When we define a bean with the singleton scope, the container creates a single instance of that bean; all requests for that bean name will return the same object, which is cached. Any modifications to the object will be reflected in all references to the bean. This scope is the default value if no other scope is specified.
+What and when bean will be created ?
+**singleton :** When we define a bean with the singleton scope, the container creates a single instance of that bean; all requests for that bean name will return the same object, which is cached. Any modifications to the object will be reflected in all references to the bean. This scope is the **default** value if no other scope is specified. Also singleton beans will be created (execution of constructor) during the start of the application i.e **eager initilaization** takes place
+
+**prototype :** A bean with the prototype scope will return a different instance every time it is requested from the container. It is defined by setting the value prototype to the @Scope annotation in the bean definition. Also prototype beans will be created (execution of constructor) only when needed i.e **lazy initilaization** takes place
+
+**request :** The request scope creates a bean instance for a single HTTP request.
+Note - **Injecting request scoped bean into singleton scoped bean** - When a singleton class needs a dependency of class annotated with request scope, error will be occured. To overcome this use proxyMode @scope(value="request",proxyMode=ScopedProxyMode.TARGET_CLASS).
+
+**session :** The request scope creates a bean instance for a single HTTP request, while the session scope creates a bean instance for an HTTP Session. 
