--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -21,6 +21,24 @@
 3. **@Respository** - We specify a class with @Repository to indicate that they’re dealing with CRUD operations, usually, it’s used with DAO (Data Access Object) or Repository implementations that deal with database tables.
 4. **@Controller** - We specify a class with @Controller to and responsible to indicate that a class serves as a controller, handle user requests and return the appropriate response. It is mostly used with REST Web Services.
 
+**Spring MVC**
+
+1.**@Controller :** - In Spring MVC, the @Controller annotation is used to mark a class as a Spring MVC controller. It indicates that the class contains methods that handle incoming HTTP requests and produce responses.
+
+2.**@RequestMapping(" ") :** This annotation is used to map web requests to Spring Controller methods. This annotation is a versatile and flexible annotation that can be used with a controller (class) as well as the methods to map specific web requests with the handler methods and controllers
+
+Before MVC : HttpServletRequest request, request.getParameter("num1),request.getParameter("num2), HttpSession session = req.getSession(),session.setAttribute("num3",num3)
+
+3. **@RequestParam("num1") String id or @RequestParam(name="num1") String id or @RequestParam(value="num1") String id :** @RequestParam to extract query parameters, form parameters, and even files from the request.num1 is parameter in the url.That parameter value will be retreived using this annotation.
+   
+**@RequestParam(required = false) String id :** Method parameters annotated with @RequestParam are required by default. This means that if the parameter isn’t present in the request, we’ll get an error. We can configure our @RequestParam to be optional, though, with the required attribute. When the parameter isn’t specified, the method parameter is bound to null.
+
+**@RequestParam(defaultValue = "test") :** We can also set a default value to the @RequestParam by using the defaultValue attribute.
+
+5. 
+
+
+
 **Other Annotations**
 
 1. **@SpringBootApplication :** Applied to the main class of the spring boot application .Uses a combination of @Documented, @Inherited, **@SpringBootConfiguration, @EnableAutoConfiguration, @ComponentScan**
