--- a/5. Spring MVC.md
+++ b/5. Spring MVC.md
@@ -1,2 +1,2 @@
 # Spring MVC
-1. **Model :** the model can supply attributes used for rendering views.To provide a view with usable data, we simply add this data to its Model object. Additionally, maps with attributes can be merged with Model instances:
+1. **Model,ModelMap,ModelAndView :** https://www.baeldung.com/spring-mvc-model-model-map-model-view
