--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -35,6 +35,13 @@ Before MVC : HttpServletRequest request, request.getParameter("num1),request.get
 
 **@RequestParam(defaultValue = "test") :** We can also set a default value to the @RequestParam by using the defaultValue attribute.
 
+4. **@ModelAttribute** : (as a method argument) When you have a form in your HTML page, you can use @ModelAttribute to bind the form fields to a Java object. This object can then be used in your controller methods. (at method level) You can use @ModelAttribute at the method level to add common attributes to the model that should be populated for multiple request mappings
+5. **@GetMapping :** @RequestMapping(value = "/get/{id}", method = RequestMethod.GET) can be replaced with @GetMapping("/get/{id}")
+6. **@PostMapping :** @RequestMapping(value = "/post/{id}", method = RequestMethod.POST) can be replaced with @PostMapping("/get/{id}").
+7. **@PutMapping :**
+8. **@DeleteMapping :**
+9. **@PatchMapping :** PATCH is used for partial updates of resources, unlike PUT which replaces the entire resource.
+
 
 
 **Other Annotations**
