--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -43,6 +43,10 @@ Before MVC : HttpServletRequest request, request.getParameter("num1),request.get
 9. **@PatchMapping :** PATCH is used for partial updates of resources, unlike PUT which replaces the entire resource.
 
 
+**Spring Rest**
+
+**@ResponseBody and @RequestBody:** https://www.baeldung.com/spring-request-response-bod
+
 
 **Other Annotations**
 
