--- a/1. Annotations.md
+++ b/1. Annotations.md
@@ -45,7 +45,7 @@ Before MVC : HttpServletRequest request, request.getParameter("num1),request.get
 
 **Spring Rest**
 
-**@ResponseBody and @RequestBody:** https://www.baeldung.com/spring-request-response-bod
+1. **@ResponseBody and @RequestBody:** https://www.baeldung.com/spring-request-response-bod
 
 
 **Other Annotations**
